Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27242

Cannot build qmake based B2Qt applications with QtC 7.0.0

XMLWordPrintable

    • ec5e060a07 (qt-creator/qt-creator/7.0) ec5e060a07 (qt-creator/qt-creator/master) b2ae521892 (qt-creator/qt-creator/master) b2ae521892 (qt-creator/qt-creator/qds-3.3) ec5e060a07 (qt-creator/qt-creator/qds-3.3) b2ae521892 (qt-creator/tqtc-qt-creator/7.0)

      Steps to reproduce:

      1. Install B2Qt toolchain and image via installer
      2. Check that QtC 7.0.0 got installed
      3. Do the normal stuff to add the device etc.
      4. Open a qmake based application
      5. Try to build

      Expected result:

      The qmake based application builds

      Actual result:

      The qmake based application does not build and Compile Output says:

      Could not start process "ssh://root@10.204.0.73/home/..../bin/make

      The issue might be reproducible with the desktop binaries also.

        1. Screenshot_20220401_094501.png
          15 kB
          Samuli Piippo
        2. Screenshot_20220401_094602.png
          20 kB
          Samuli Piippo
        3. Screenshot_20220401_104213.png
          70 kB
          Samuli Piippo
        4. Screenshot 2022-03-29 at 10.21.01.png
          52 kB
          Eike Ziller
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes