Fix default build device

If the kit doesn't specify anything specific, default to the local host.

Fixes: QTCREATORBUG-27242
Change-Id: Ie19a332638467bd121314a2a0303803253ced4af
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: hjk <hjk@qt.io>